--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Seachang Now </title>
+      <title>Seachange Now </title>
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/normalize.min.css" rel="stylesheet">
       <link href="css/style.css" rel="stylesheet">
