--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/normalize.min.css" rel="stylesheet">
       <link href="css/style.css" rel="stylesheet">
+        <link href="css/">
       <link href="css/font-awesome.min.css" rel="stylesheet">
    </head>
    <body>
       <header>
          <div class="wrapper">
+             <div class="video-background">
+	       <div class="_pattern-overlay"></div>
+	
+	<!-- MUST set &playlist=sameVideoID to loop -->
+	       <iframe class="_youtube-iframe" src="https://www.youtube.com/embed/0vrdgDdPApQ?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&vq=medium&playlist=0vrdgDdPApQ" frameborder="0" allowfullscreen></iframe>
+             </div>
             <div class="top-header" id="header">
                <div class="container">
                   <nav class="navbar navbar-expand-md ">
