--- a/index.html
+++ b/index.html
@@ -8,22 +8,14 @@
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/normalize.min.css" rel="stylesheet">
       <link href="css/style.css" rel="stylesheet">
-        <link href="css/">
+       <link href="css/video.scss" rel="stylesheet">
       <link href="css/font-awesome.min.css" rel="stylesheet">
    </head>
    <body>
       <header>
          <div class="wrapper">
-
             <div class="top-header" id="header">
-                           
                <div class="container">
-                     <div class="video-background">
-	       <div class="_pattern-overlay"></div>
-	
-	<!-- MUST set &playlist=sameVideoID to loop -->
-	       <iframe class="_youtube-iframe" src="https://www.youtube.com/embed/0vrdgDdPApQ?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&vq=medium&playlist=0vrdgDdPApQ" frameborder="0" allowfullscreen></iframe>
-             </div>
                   <nav class="navbar navbar-expand-md ">
                      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                      <span class="navbar-toggler-icon"></span>
@@ -51,12 +43,12 @@
                </div>
             </div>
             <div class="caption">
-               <h2>Inspire. Lead. Transform.</h2>
+                <h2>Inspire. Lead. Transform.</h2>
             </div>
          </div>
       </header>
       <!-- =========================Header End=========================-->
-      <Section class="welcome" id="">
+      <section class="welcome" id="">
          <div class="container">
             <h2>Welcome</h2>
             <div class="row">
@@ -221,5 +213,9 @@
              });
          });
       </script>
+          <script>
+          jQuery(document).ready(function($) {
+});
+          </script>
    </body>
 </html>
